# ripgrep_all_mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  NOTICE  README.md  build.bat  build.sh  docker-compose.http.yaml  docker-compose.stdio.yaml  docker-compose.yaml  examples.ts  jest.config.js  package-lock.json  package.json  ripgrep-all-mcp.code-workspace  tsconfig.json
docs/: README.md  docker_usage_guide.md
docs/architecture/: COMPLETION_REPORT.md  rga-mcp-skill-design.md
docs/deployment/: DEPLOYMENT.md
docs/getting-started/: 00_START_HERE.md  INDEX.md  QUICK_START.md
docs/integration/: AGNO_INTEGRATION.md  OPENCODE_INTEGRATION.md
docs/technical-reference/: API.md  FILES.md  PROJECT_SUMMARY.md
examples/: README.md  claude-desktop-config.json  opencode.json  test-mcp-http.sh
src/: exports.ts  index.ts
src/integrations/: agno-agent.ts
src/tools/: extract.ts  formats.ts  handler.ts  list-documents.ts  register.ts  registry.ts  search.ts  upload.ts
src/types/: index.ts
src/utils/: rga-executor.ts  tokens.ts
testcase/: README.md  formats.test.ts  mcp-server.test.ts  rga-executor.test.ts  run-all-tests.sh  tokens.test.ts  tool-handler.test.ts  tool-registry.test.ts  upload.test.ts
testcase/agno/: .env.example  agno_logprobs_qa.py  document_qa_workflow.py  logprobs_analyzer.py  pyproject.toml  requirements.txt  test_agno_rga.py
